add the split of dataset in training and testing set

--- a/src/SpacyModel.ipynb
+++ b/src/SpacyModel.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 34,
+   "execution_count": 7,
    "outputs": []
   },
   {
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_epoch = 10"
+    "n_epoch = 6"
    ]
   },
   {
@@ -94,45 +94,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_data(limit=0, split=0.8):\n",
+    "def load_data(limit=0, split_dev=0.1, split_test=0.1):\n",
+    "\n",
     "    with open(\"../data/training_set.json\", \"r\") as f:\n",
-    "        training_set = json.load(f)\n",
-    "    texts = [elem.get('sentence') for elem in training_set]\n",
-    "    cats = [{ intent : (elem.get('intent')==intent) for intent in INTENTS} for elem in training_set]\n",
-    "    split = int(len(training_set) * split)\n",
-    "    return (texts[:split], cats[:split]), (texts[split:], cats[split:])"
+    "        dataset = json.load(f)\n",
+    "\n",
+    "    index_test = int((split_test+split_dev) *len(dataset))\n",
+    "    index_dev = int(split_dev *len(dataset))\n",
+    "    random.shuffle(dataset)\n",
+    "\n",
+    "    testing_set = dataset[:index_test]\n",
+    "    print(testing_set[:10])\n",
+    "    with open(\"../data/testing_set.json\", \"w\", encoding='utf-8') as f:\n",
+    "        json.dump(testing_set, f,  ensure_ascii=False)\n",
+    "    \n",
+    "    texts = [elem.get('sentence') for elem in dataset]\n",
+    "    cats = [{ intent : (elem.get('intent')==intent) for intent in INTENTS} for elem in dataset]\n",
+    "    # Separation\n",
+    "    return  ((texts[index_dev:], cats[index_dev:]), \n",
+    "            (texts[index_test:index_dev], cats[index_test:index_dev]),)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(train_texts, train_cats), (dev_texts, dev_cats) = load_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Using 6035 examples (4828 training, 1207 evaluation)\n"
+      "[{'intent': 'irrelevant', 'sentence': 'Celui gratuit'}, {'intent': 'irrelevant', 'sentence': 'Alors oui max 150€'}, {'intent': 'irrelevant', 'sentence': \"J'ai bien rdv à 10h au spa de opio atout formes ?\"}, {'intent': 'irrelevant', 'sentence': \"Tu as des offres intéressantes à me proposer pour une loc de voiture (type sport), je veux du choix et j'ai un budget de 1000€ par semaine. Ça va driver ! 🚗\"}, {'intent': 'find-hotel', 'sentence': 'Bonjour je cherche un hôtel autour de Nantes dans un rayon de 50km,au calme avec un bon restaurant sur place. Je ne veux pas que ce soit dans Nantes. Plutôt un genre relais château dans les environs. C’est pour 1 nuit du 31 Juillet au 1er Août'}, {'intent': 'irrelevant', 'sentence': 'A menton'}, {'intent': 'find-train', 'sentence': 'À quelle heure arrive le dernier train de Paris à Noyelles'}, {'intent': 'provide-showtimes', 'sentence': 'Films à voir en famille au ciné'}, {'intent': 'irrelevant', 'sentence': \"Serais ce possible de réserver ? C'est pour 3 a 13h30, 14h\"}, {'intent': 'find-restaurant', 'sentence': \"Tu me suggères un bon petit resto où l'on peut gueuletonner entre amis ce soir ?\"}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "(train_texts, train_cats), (dev_texts, dev_cats) = load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Using 5431 examples (4828 training, 603 evaluation)\n604\n"
      ]
     }
    ],
    "source": [
     "print(\"Using {} examples ({} training, {} evaluation)\".format(\n",
     "    len(train_texts)+ len(dev_texts), len(train_texts), len(dev_texts)))\n",
-    "    \n",
+    "      \n",
     "train_data = list(zip(train_texts, [{\"cats\": cats} for cats in train_cats]))"
    ]
   },
